--- a/config/locales/en/outcome.yml
+++ b/config/locales/en/outcome.yml
@@ -1,11 +1,17 @@
 en:
-  categories:
+  outcomes:
     attributes:
       name: "Name"
+      value: "Value"
+      month: "Month"
+      category: "Category"
     placeholder:
-      name: "Enter category name ..."
+      name: "Enter outcome name ..."
+      value: "Enter outcome value ..."
+      month: "Select month"
+      category: "Select category"
     titles:
-      all: "Categories"
-      create: "Create new category"
-      update: "Change category"
-      destroy: "Remove category"
+      all: "Outcomes"
+      create: "Create new outcome"
+      update: "Change outcome"
+      destroy: "Remove outcome"
