--- a/config/locales/en/income.yml
+++ b/config/locales/en/income.yml
@@ -17,3 +17,6 @@ en:
       create: "Create new income"
       update: "Change income"
       destroy: "Remove income"
+    tabs:
+      table: Detail
+      statistics: Statistics
