Select month income outcome

--- a/config/locales/en/en.yml
+++ b/config/locales/en/en.yml
@@ -55,7 +55,7 @@ en:
       default: "%Y-%m-%d"
       long: "%B %d, %Y"
       short: "%b %d"
-      month: "%m/%Y"
+      month: "%Y-%m"
   number:
     currency:
       format:
