--- a/config/locales/en/income.yml
+++ b/config/locales/en/income.yml
@@ -3,14 +3,14 @@ en:
     attributes:
       name: "Name"
       value: "Value"
-      month: "Month"
+      month: "Date"
       category: "Category"
       note: "Note"
       main_income: "Main income"
     placeholder:
       name: "Enter income name ..."
       value: "Enter income value ..."
-      month: "Select month"
+      month: "Select date"
       category: "Select category"
       note: "Enter income note ..."
     titles:
@@ -18,6 +18,7 @@ en:
       create: "Create new income"
       update: "Change income"
       destroy: "Remove income"
+      select_month: "Month"
     tabs:
       table: Detail
       statistics: Statistics
